--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       id="root_bank"
       ispro="1"
       role="director"
-      token="Bearer 2109|7d9OHVhjO02gY9rrbjV5rTfCpFs4iVShk6TtSrCg"
+      token="Bearer 350|AzgciLV9wnUGymn4vpCMuG8gGWJRtcvEHfZuNgi7"
     ></div>
     <div id="modal-root"></div>
   </body>
@@ -26,3 +26,4 @@
 <!-- Bearer 350|AzgciLV9wnUGymn4vpCMuG8gGWJRtcvEHfZuNgi7 -->
 
 <!-- Bearer 2848|02CysCMU11idIDngTKwV2GppodaXeLFpwVJXwMuU -->
+<!-- token="Bearer 2109|7d9OHVhjO02gY9rrbjV5rTfCpFs4iVShk6TtSrCg" -->
